// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker snapshot Picker demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 8`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 9`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 10`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 11`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 12`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;

exports[`Picker snapshot Picker demo snapshot 0 13`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium bui-btn-default"
    onClick={[Function]}
    type="button"
  >
    打开选择器
  </button>
</div>
`;
